--- a/Videojuegos Pato/Views/Shared/_Layout.cshtml
+++ b/Videojuegos Pato/Views/Shared/_Layout.cshtml
@@ -10,24 +10,36 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Videojuegos_Pato</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-*">
+          <div class="container-fluid">
+            <a asp-area="" asp-controller="Home" asp-action="Index"><img  id="navbarLogo" src="~/media/VideojuegosPato/Isologo.png" height="80px"/></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end mt-2" id="navbarSupportedContent">
+              <div class="d-flex flex-lg-row-reverse justify-content-between align-items-baseline">
+                <div class="d-flex flex-lg-row flex-column gap-2">
+                  <button type="button" class="btn btn-outline-light botonHeader" data-bs-toggle="modal" data-bs-target="#inicioSesion">
+                    Iniciar Sesion
+                  </button>
+                  <button type="button" class="btn btn-outline-light botonHeader" data-bs-toggle="modal" data-bs-target="#Registro">
+                    Registrarse
+                  </button>
                 </div>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-2">Categorias</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Catalog"><p class="letrasHeader me-2">Catalogo</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-4">Usuarios</p></a>
+                  </li>
+                </ul>
+              </div>
             </div>
+          </div>
         </nav>
     </header>
     <div class="container">
