Controllers and Views

--- a/Videojuegos Pato/Views/Shared/_Layout.cshtml
+++ b/Videojuegos Pato/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end mt-2" id="navbarSupportedContent">
               <div class="d-flex flex-lg-row-reverse justify-content-between align-items-baseline">
-                <div class="d-flex flex-lg-row flex-column gap-2">
+                <div class="d-flex flex-lg-row flex-column gap-2 ms-2">
                   <button type="button" class="btn btn-outline-light botonHeader" data-bs-toggle="modal" data-bs-target="#inicioSesion">
                     Iniciar Sesion
                   </button>
@@ -28,13 +28,10 @@
                 </div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-2">Categorias</p></a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Catalog"><p class="letrasHeader me-2">Catalogo</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-4">Usuarios</p></a>
+                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-2">Mantenimientos</p></a>
                   </li>
                 </ul>
               </div>
