--- a/Videojuegos Pato/Views/Shared/_Layout.cshtml
+++ b/Videojuegos Pato/Views/Shared/_Layout.cshtml
@@ -7,24 +7,35 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Videojuegos_Pato.styles.css" asp-append-version="true" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        $(window).resize(function(e){
+        if($(window).width() < 600) {
+            console.log($(window).width());
+            $("#navbarLogo").each(function() {
+                $(this).attr("src","media/VideojuegosPato/Isotipo.webp");
+            });
+        } else {
+            $("#navbarLogo").each(function() {
+                $(this).attr("src","media/VideojuegosPato/Imagotipo.webp");
+            });                      
+        }        
+        });
+    </script>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-*">
+        <nav class="navbar navbar-expand-xl navbar-light bg-*">
           <div class="container-fluid">
-            <a asp-area="" asp-controller="Home" asp-action="Index"><img  id="navbarLogo" src="~/media/VideojuegosPato/Isologo.png" height="80px"/></a>
+            <a asp-area="" asp-controller="Home" asp-action="Index"><img  id="navbarLogo" src="~/media/VideojuegosPato/Imagotipo.webp" height="80px"/></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end mt-2" id="navbarSupportedContent">
-              <div class="d-flex flex-lg-row-reverse justify-content-between align-items-baseline">
-                <div class="d-flex flex-lg-row flex-column gap-2 ms-2">
-                  <button type="button" class="btn btn-outline-light botonHeader" data-bs-toggle="modal" data-bs-target="#inicioSesion">
-                    Iniciar Sesion
-                  </button>
-                  <button type="button" class="btn btn-outline-light botonHeader" data-bs-toggle="modal" data-bs-target="#Registro">
-                    Registrarse
-                  </button>
+              <div class="d-flex flex-xl-row-reverse justify-content-between align-items-baseline">
+                <div class="d-flex flex-xl-row flex-column gap-2 ms-2">
+                  <a class="btn btn-outline-light botonHeader" asp-controller="Account" asp-action="Signup">Iniciar Sesion</a>
+                  <a class="btn btn-outline-light botonHeader" asp-controller="Account" asp-action="Signup">Registrarse</a>
                 </div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
