Login and Logout

--- a/Videojuegos Pato/Views/Shared/_Layout.cshtml
+++ b/Videojuegos Pato/Views/Shared/_Layout.cshtml
@@ -34,8 +34,8 @@
             <div class="collapse navbar-collapse justify-content-end mt-2" id="navbarSupportedContent">
               <div class="d-flex flex-xl-row-reverse justify-content-between align-items-baseline">
                 <div class="d-flex flex-xl-row flex-column gap-2 ms-2">
-                  <a class="btn btn-outline-light botonHeader" asp-controller="Account" asp-action="Signup">Iniciar Sesion</a>
-                  <a class="btn btn-outline-light botonHeader" asp-controller="Account" asp-action="Signup">Registrarse</a>
+                  <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Login">Iniciar Sesion</a>
+                  <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Signup">Registrarse</a>
                 </div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
