--- a/Videojuegos Pato/Views/Shared/_Layout.cshtml
+++ b/Videojuegos Pato/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Videojuegos_Pato.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(window).resize(function(e){
@@ -33,16 +34,37 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end mt-2" id="navbarSupportedContent">
               <div class="d-flex flex-xl-row-reverse justify-content-between align-items-baseline">
-                <div class="d-flex flex-xl-row flex-column gap-2 ms-2">
-                  <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Login">Iniciar Sesion</a>
-                  <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Signup">Registrarse</a>
+                <div class="d-flex flex-xl-row flex-column gap-2">
+                    <ul class="navbar-nav">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <form asp-controller="Home" asp-action="Logout" method="post">
+                                <li class="dropdown dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link active text-light letrasHeader" asp-controller="Profile" asp-action="Index">
+                                            @User.Identity.Name
+                                            <i class="bi bi-person-circle"></i>
+                                        </a>
+                                    </a>
+                                    <ul class="dropdown-menu" style="background-color: #5a6eed;" aria-labelledby="navbarDropdown">
+                                        <li><button class="btn btn-outline-light botonHeader">Logout</button></li>
+                                    </ul>
+                                </li>
+                            </form>
+                        }
+                        else
+                        {
+                            <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Login">Iniciar Sesion</a>
+                            <a class="btn btn-outline-light botonHeader" asp-controller="Home" asp-action="Signup">Registrarse</a>     
+                        }
+                    </ul>
                 </div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Catalog"><p class="letrasHeader me-2">Catalogo</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Home" asp-action="Privacy"><p class="letrasHeader me-2">Mantenimientos</p></a>
+                    <a class="nav-link active text-light" aria-current="page" asp-area="" asp-controller="Maintenance" asp-action="Maintenance"><p class="letrasHeader">Mantenimientos</p></a>
                   </li>
                 </ul>
               </div>
