--- a/Videojuegos Pato/Views/Advertisements/Index.cshtml
+++ b/Videojuegos Pato/Views/Advertisements/Index.cshtml
@@ -132,7 +132,7 @@
         {
             <tr>
                 <td>@advertisement.ID</td>
-                <td><img src="~/media/Advertisement/@advertisement.ImageName"></td>
+                <td><img height="315" src="~/media/Advertisement/@advertisement.ImageName"></td>
                 <td>
                     <button class="btn btn-primary" data-bs-target="#Edit" data-bs-toggle="modal" data-bs-id="@advertisement.ID" data-bs-name="@advertisement.ImageName">Editar</button>
                     <button class="btn btn-warning" data-bs-target="#Delete" data-bs-toggle="modal" data-bs-id="@advertisement.ID" data-bs-name="@advertisement.ImageName">Delete</button>
