--- a/Videojuegos Pato/Views/Home/Index.cshtml
+++ b/Videojuegos Pato/Views/Home/Index.cshtml
@@ -1,7 +1,67 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    int counter = 0;
+    int counter2 = 0;
 }
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model dynamic
+
+<div class="container-lg">
+    <h2>¡Visita nuestra tienda!</h2>
+    <div id="carousel" class="carousel slide mb-5" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            @foreach (var advertisement in Model.advertisements)
+            {
+                if(counter == 0)
+                {
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 0"></button>
+                }
+                else
+                {
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="@counter" aria-label="Slide @counter"></button>
+                }
+                counter += 1;
+            }
+        </div>
+        <div class="carousel-inner">
+            @foreach (var advertisement in Model.advertisements)
+            {
+                if(counter2 == 0)
+                {
+                    <div class="carousel-item active">
+                        <img src="~/media/Advertisement/@advertisement.ImageName" class="d-block w-100" style="max-height: 400px;">
+                    </div>
+                }
+                else
+                {
+                    <div class="carousel-item">
+                        <img src="~/media/Advertisement/@advertisement.ImageName" class="d-block w-100" style="max-height: 400px;">
+                    </div>
+                }
+                counter2 += 1;
+            }
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <h2>Productos Recomendados</h2>
+    <div id="listaProductos" class="row row-cols-2 row-cols-xl-5 row-cols-xxl-7">
+        @foreach (var product in Model.products)
+        {
+            <div class="card col pt-2 m-2" style="min-width: 10rem; width: 10rem; border-radius: 10px;">
+                <img class="card-img-top" height="315" src="~/media/ProductImages/@product.ImageName">
+                <div class="card-body">
+                    <p class="card-text">@product.Name</p>
+                    <footer class="card-unit">@product.Quantity unid</footer>
+                    <p class="card-text">$@product.Price</p>
+                    <a class="btn btn-primary" asp-action="Product">Ver más ></a>
+                </div>
+            </div>
+        }
+    </div>
 </div>
