--- a/Videojuegos Pato/Views/Maintenance/Index.cshtml
+++ b/Videojuegos Pato/Views/Maintenance/Index.cshtml
@@ -3,7 +3,8 @@
 *@
 @{
 }
-<a class="btn btn-outline-dark botonHeader mx-2" asp-controller="Categories" asp-action="Index">Mantenimiento de Categorias</a>
-<a class="btn btn-outline-dark botonHeader mx-2" asp-controller="Users" asp-action="Index">Mantenimiento de Usuarios</a>
-<a class="btn btn-outline-dark botonHeader mx-2" asp-controller="Advertisements" asp-action="Index">Mantenimiento de Anuncios</a>
-<a class="btn btn-outline-dark botonHeader mx-2" asp-controller="Products" asp-action="Index">Mantenimiento de VideoJuegos</a>
+<h1>Pagina de mantenimientos Videojuegos Pato</h1>
+<a class="btn btn-primary botonHeader mx-2 my-3" asp-controller="Categories" asp-action="Index">Mantenimiento de Categorias</a><br />
+<a class="btn btn-primary botonHeader mx-2 mb-3" asp-controller="Users" asp-action="Index">Mantenimiento de Usuarios</a><br />
+<a class="btn btn-primary botonHeader mx-2 mb-3" asp-controller="Advertisements" asp-action="Index">Mantenimiento de Anuncios</a><br />
+<a class="btn btn-primary botonHeader mx-2" asp-controller="Products" asp-action="Index">Mantenimiento de VideoJuegos</a>
