--- a/Videojuegos Pato/Views/Categories/Index.cshtml
+++ b/Videojuegos Pato/Views/Categories/Index.cshtml
@@ -32,6 +32,30 @@
     </div>
   </div>
 </div>
+@*Create Modal*@
+<div class="modal fade" id="Create" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-fullscreen-sm-down">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Editar Categoria</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+        @using (Html.BeginForm("Insert", "Categories", FormMethod.Post))
+        {
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Nombre de la Categoria</label>
+                    <input type="text" name="name"/>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="submit" class="btn btn-primary">Crear categoria</button>
+            </div>
+        }
+    </div>
+  </div>
+</div>
 @*Delete Modal*@
 <div class="modal fade" id="Delete" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-fullscreen-sm-down">
@@ -59,18 +83,17 @@
 @*Maintenance*@
 <h1>Mantenimiento de Categorias</h1>
 <br />
+<a class="btn btn-success mb-1" data-bs-target="#Create" data-bs-toggle="modal">
+    <i class="bi bi-person-plus"></i>
+    Nueva Categoria
+</a>
+<br />
 @using (Html.BeginForm("Index", "Categories", FormMethod.Post))
 {
     <input type="text" name="name" placeholder="Ingrese la categoria" />
     <button type="submit" class="btn btn-primary">Obtener categoria</button>
 }
 <br />
-@using (Html.BeginForm("Insert", "Categories", FormMethod.Post))
-{
-    <input type="text" name="name" placeholder="Nombre" />
-    <button type="submit" class="btn btn-primary">Crear categoria</button>
-}
-
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
