--- a/Videojuegos Pato/Views/Home/Index.cshtml
+++ b/Videojuegos Pato/Views/Home/Index.cshtml
@@ -53,8 +53,8 @@
     <div id="listaProductos" class="row row-cols-2 row-cols-xl-5 row-cols-xxl-7">
         @foreach (var product in Model.products)
         {
-            <div class="card col pt-2 m-2" style="min-width: 10rem; width: 10rem; border-radius: 10px;">
-                <img class="card-img-top" height="315" src="~/media/ProductImages/@product.ImageName">
+            <div class="card col pt-2 m-2" style="min-width: 12rem; width: 14rem; border-radius: 10px;">
+                <img class="card-img-top" src="~/media/ProductImages/@product.ImageName">
                 <div class="card-body">
                     <p class="card-text">@product.Name</p>
                     <footer class="card-unit">@product.Quantity unid</footer>
